syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message QuestDestroyEntityReq {
	uint32 quest_id = 14;
	uint32 scene_id = 11;
	uint32 entity_id = 12;
}