syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message WorldChestOpenNotify {
	uint32 config_id = 5;
	uint32 group_id = 14;
	uint32 scene_id = 1;
}